@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* bugfix: LiveServlet.getHome() is called within a cope transaction in all cases
 * session serialization relies on a serializable model to be edited,
 	use Model.enableSerialization
 * increase z-index of editor bar from 1 to 1000
